--- a/README.rdoc
+++ b/README.rdoc
@@ -1,11 +1,10 @@
-h2. What is this?
+= Rack Cookie Monster
 
 A rack middleware library that allows for cookies to be passed through forms.
 
-h2. Usage
+= Usage
 
 Example:
-<pre>
   CookieMonster.configure do |c|
     c.eat :_session_id
     c.eat :user_credentials
@@ -17,5 +16,3 @@ Example:
     ActionController::Base.session_store, 
     CookieMonster
   )
-</pre>
-
