--- a/README.rdoc
+++ b/README.rdoc
@@ -2,6 +2,12 @@
 
 A rack middleware library that allows for cookies to be passed through forms.
 
+= Contributing
+  The environment can be configured by using bundler.
+  <pre>
+  gem bundle
+  </pre>
+  
 = Usage
 
 Rails Example:
